--- a/src/PaP/BackBundle/Resources/config/services.yml
+++ b/src/PaP/BackBundle/Resources/config/services.yml
@@ -1,4 +1,23 @@
 services:
-#    back.example:
-#        class: PaP\BackBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+#Service qui crée le formulaire
+    announcement_form:
+        factory_service: form.factory
+        factory_method: createNamed
+        class:  Symfony\Component\Form\Form
+        arguments:
+            #nom et type
+            - announcement
+            - announcement_form
+
+#Creer un service pour le Type
+    announcement_type:
+        class: PaP\BackBundle\Form\AnnouncementType
+        tags:
+            - {name: form.type, alias: announcement_form }
+
+    announcement_handler:
+        class: PaP\BackBundle\Form\Handler\AnnouncementHandler
+        arguments: [@announcement_form, @request, @doctrine.orm.entity_manager]
+        scope: request
+
+
