--- a/src/PaP/BackBundle/Resources/config/routing/announcement.yml
+++ b/src/PaP/BackBundle/Resources/config/routing/announcement.yml
@@ -18,7 +18,7 @@ back_announcement_create:
         method: GET|POST
 
 back_announcement_edit:
-    path:     /edit/{id}
+    path:     /edit/{offer}
     defaults: { _controller: BackBundle:Announcement:edit }
     requirements:
         id: \d+
